# safe-agent-skills

./: .gitignore  INSTALL.md  README.md  SECURITY.md
skills/amazon-paapi-v5/: CHANGELOG.md  README.md  SKILL.md  pyproject.toml
skills/amazon-paapi-v5/docs/: README.md  api_coverage.md  architecture.md  authentication.md  command_reference.md  configuration.md  jobs_and_batches.md  onboarding.md  proof.md  quickstart.md  references.md  safety_model.md  troubleshooting.md  use_cases.md
skills/amazon-paapi-v5/examples/: jobs.csv  jobs_with_write.csv
skills/amazon-paapi-v5/tests/: test_amazon_urls.py  test_batching_and_new_commands.py  test_cli_json_parse_errors.py  test_cli_version.py  test_config.py  test_docs_formatting.py  test_jobs.py  test_paapi_signing.py  test_readme_public_contract.py  test_smoke.py
skills/cloudflare/: .gitignore  CHANGELOG.md  README.md  SKILL.md  pyproject.toml
skills/cloudflare/docs/: README.md  api_coverage.md  api_coverage_account_access.md  api_coverage_accounts_get.md  api_coverage_accounts_writes.md  api_coverage_ai_gateway.md  api_coverage_ai_search.md  api_coverage_autorag.md  api_coverage_cache_purge.md  api_coverage_custom_hostnames.md  api_coverage_d1.md  api_coverage_dlp_email.md  api_coverage_dns.md  api_coverage_email_routing.md  api_coverage_email_security.md  api_coverage_email_security_settings.md  api_coverage_filters.md  api_coverage_firewall.md  api_coverage_hyperdrive.md  api_coverage_images.md  api_coverage_live_official.md  api_coverage_load_balancers.md  api_coverage_managed_transforms.md  api_coverage_observability.md  api_coverage_organizations.md  api_coverage_page_rules.md  api_coverage_pages.md  api_coverage_pipelines.md  api_coverage_queues.md  api_coverage_r2.md  api_coverage_r2_catalog.md  api_coverage_radar_all.md  api_coverage_radar_attacks_layer3.md  api_coverage_radar_attacks_layer7.md  api_coverage_radar_bgp.md  api_coverage_radar_dns.md  api_coverage_radar_email_routing.md  api_coverage_radar_email_security.md  api_coverage_radar_http.md  api_coverage_radar_netflows.md  (+31 more)
skills/cloudflare/tests/: _git_snapshot.py  _live_inventory.py  test_account_access_commands.py  test_accounts_get_allowlist.py  test_accounts_writes_allowlist.py  test_audit_log.py  test_auth_doctor_command.py  test_browser_run_commands.py  test_cache_purge_command.py  test_cli_json_parse_errors.py  test_cli_version.py  test_cloudflare_client_cache_metadata.py  test_config_local_commands.py  test_core_commands.py  test_custom_hostnames_commands.py  test_dns_commands.py  test_docs_formatting.py  test_email_routing_commands.py  test_jobs_runner.py  test_load_balancers_commands.py  test_observability_commands.py  test_onboarding_command.py  test_openapi_runner.py  test_operations_coverage_drift.py  test_pages_deploy.py  test_phase_27_top_level_allowlist.py  test_radar_all_allowlist.py  test_radar_attacks_allowlist.py  test_radar_bgp_allowlist.py  test_radar_netflows_allowlist.py  test_readme_public_contract.py  test_registrar_commands.py  test_sensitive_reads.py  test_short_ttl_cache.py  test_smoke.py  test_ssl_tls_commands.py  test_storage_and_databases_commands.py  test_timeout_profiles.py  test_tunnels_commands.py  test_turnstile_commands.py  (+10 more)
skills/freepik/: .gitignore  CHANGELOG.md  README.md  SKILL.md  pyproject.toml
skills/freepik/docs/: README.md  api_coverage.md  architecture.md  authentication.md  command_reference.md  configuration.md  development.md  inventory_schema.md  onboarding.md  proof.md  quickstart.md  recipe_workflow_recipes.md  references.md  safety_model.md  troubleshooting.md  use_cases.md
skills/freepik/tests/: test_cli_json_output_contract.py  test_config.py  test_download_ack_no_snapshot.py  test_download_image_size.py  test_download_overwrite_guard.py  test_examples_contract.py  test_freepik_api_headers.py  test_http.py  test_inventory.py  test_jobs_require_yes.py  test_jsonpath.py  test_readme_public_contract.py  test_resource_related_groups.py  test_resource_shoot_pack.py  test_search_exclude_ai.py  test_search_photos_defaults.py  test_shortlist_shape.py  test_write_jobs_csv.py
skills/google-ads/: CHANGELOG.md  README.md  SKILL.md  pyproject.toml
skills/google-ads/docs/: README.md  agent_recipes.md  api_coverage.md  architecture.md  authentication.md  cli_rpc_surface_v22_2026-03-01.txt  client_rpc_surface_v22_2026-03-01.txt  command_reference.md  configuration.md  diagnosis_reference.md  kpi_dictionary.md  media_buyer_quickstart.md  official_rpc_surface_v22_2026-03-01.txt  onboarding.md  presets_reference.md  proof.md  quickstart.md  references.md  safety_model.md  snapshot_export_reference.md  troubleshooting.md  use_cases.md  winning_ads_workbook.md
skills/google-ads/tests/: test_analysis_pack_max_v1_gaql_fields.py  test_auth_check_no_secrets.py  test_builders_commands.py  test_cli_global_flag_normalization.py  test_cli_json_contract.py  test_cli_version.py  test_creative_anatomy_table.py  test_docs_formatting.py  test_gaql_limit.py  test_helpers_campaign_tree.py  test_helpers_commands.py  test_helpers_csv_input.py  test_helpers_lookup_by_name.py  test_onboarding.py  test_optimization_pack_v1_gaql_fields.py  test_presets_commands.py  test_presets_validation_failures.py  test_readme_public_contract.py  test_rpc_before_state.py  test_rpc_payload_redaction.py  test_rpc_request_parsing.py  test_rpc_surface_coverage.py  test_rpc_write_classifier.py  test_rpc_write_safety_gates.py  test_rpc_write_verification.py  test_snapshot_analyze_diagnose.py  test_snapshot_analyze_optimize.py  test_snapshot_compare.py  test_snapshot_export_dry_run.py  test_snapshot_export_include_optional.py  (+6 more)
skills/google-tag-manager/: CHANGELOG.md  README.md  SKILL.md  pyproject.toml
skills/jobber/: CHANGELOG.md  README.md  SKILL.md  pyproject.toml
skills/meta-ads/: CHANGELOG.md  README.md  SKILL.md  pyproject.toml
skills/open-library/: CHANGELOG.md  README.md  SKILL.md  pyproject.toml
skills/plausible/: CHANGELOG.md  README.md  SKILL.md  pyproject.toml
skills/shopify-admin/: CHANGELOG.md  README.md  SKILL.md  pyproject.toml
(+3885 files in other folders)
