[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-ads-api-tool"
version = "0.6.0"
description = "Google Ads API CLI (safe-by-default; explicit per-RPC-method commands; plan-first writes)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-ads==29.2.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.8.0",
  "ruff>=0.6.0",
]

[project.scripts]
google-ads-api-tool = "google_ads_api_tool.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
google_ads_api_tool = ["presets/builtin/*.json"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".venv", "build", "dist", "src/**.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
pretty = false
exclude = "(^\\.venv/|^build/|^dist/|^src/.*\\.egg-info/)"
